Fix card spacing on mobile
This was requested by UAT feedback

--- a/assets/src/scss/blocks/Timeline/TimelineStyle.scss
+++ b/assets/src/scss/blocks/Timeline/TimelineStyle.scss
@@ -374,7 +374,7 @@
 
     border: 1px solid var(--grey-500);
     max-width: 340px;
-    margin: 0 auto $sp-2;
+    margin-bottom: $sp-3;
     border-radius: $sp-1;
     background-color: var(--white);
     padding: $sp-2;
